# fastapi_auth_cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .dockerignore  Dockerfile  README.md  dev.Dockerfile  dev.docker-compose.yml  docker-compose.yml  pyproject.toml  template.env
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: database.py  main.py  settings.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/dependencies/: database.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/dependencies/auth/: __init__.py  must_be_admin.py  token.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/models/: __init__.py  password.py  user.py  user_form.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/routes/: __init__.py  admin.py  auth.py  user.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/utils/: password.py
